1995-07-30  Thomas E. Dickey  <dickey@clark.net>

	* src/sortset.c: ARO/KEY-definitions

	* src/sortset.c: use MODULE_ID

	* src/ftree.c, src/dlog.c: ARO/KEY-definitions

	* src/dlog.c: use MODULE_ID

	* src/dedtype.c: ARO/KEY-definitions

	* src/dedtype.c: use MODULE_ID

	* src/dedline.c, src/ded.c: ARO/KEY-definitions

1995-07-04  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c, src/ftree.c: use ungetch instead of ungetc

	* src/dedsigs.c: toggle 'enable_winch()'

	* src/dedsigs.c: use MODULE_ID

1995-04-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	change interface of 'setmtime()' to avoid clobbering 'atime' value (larry ammann)

	* user/ded.man: corrected description of sort-by-modification date

1995-04-01  Thomas E. Dickey  <dickey@clark.net>

	* src/dedsize.c: added a 'working' latch

	* src/dedsize.c: use MODULE_ID

1995-01-28  Thomas E. Dickey  <dickey@clark.net>

	* src/Makefile: some cleanup of symbols

	* test/test2.cmd: new modules

	* src/ftree.c: fix test-cases with missing log-message

	* test/test1.cmd: new modules

	* src/ded.c: 'box' variable shadows something in bsd-curses

	* src/dedview.c, src/ftree.c: use 'addchnstr()' compatibility function

1995-01-06  Thomas E. Dickey  <dickey@clark.net>

	* src/dedline.c:
	corrected shift-count used to apply chmod-mask when editing octal number

1994-12-16  Thomas E. Dickey  <dickey@clark.net>

	* src/dlog.c: guarded ifdef for <stdarg.h>

	* src/dedview.c, src/ftree.c: corrected ifdef for addchnstr

	* src/ded.h: guarded ifdef for <stdarg.h>

1994-11-22  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.h: added quitVIEW

	* src/dedring.c: invoke quitVIEW to cleanup if we've got to

	* src/dedview.c: added quitVIEW function

	* src/ded.c: suppress type-ahead if we can

1994-11-13  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c: corrected logic that supports -sz, -sZ options

	* src/ftree.c:
	fixes for the special case when I create a leaf directory _before_ the RCS